--- a/bricc/Cargo.toml
+++ b/bricc/Cargo.toml
@@ -23,3 +23,5 @@ profont = "0.5.0"
 rsip-dns = "0.1.3"
 rsip = "0.2.0"
 smol = "1.2"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.5"
