--- a/esp32/Cargo.toml
+++ b/esp32/Cargo.toml
@@ -27,6 +27,8 @@ embedded-svc = "0.16"
 embedded-hal = "0.2"
 embedded-graphics = "0.7"
 bricc = { path = "../bricc"  }
+base64 = "0.13.0"
+serde = { version = "1.0", features = ["derive"] }
 
 [patch.crates-io]
 smol = { git = "https://github.com/esp-rs-compat/smol" }
