--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2021"
 embedded-graphics-simulator = "0.3.0"
 embedded-graphics = "0.7.1"
 bricc = { path = "../bricc", features = ["telnet"] }
+kv = "0.22.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [features]
 telnet = []
