--- a/bricc/Cargo.toml
+++ b/bricc/Cargo.toml
@@ -19,6 +19,7 @@ debug = []
 [dependencies]
 log = "0.4.14"
 embedded-graphics = "0.7.1"
+embedded-text = "0.5.0"
 profont = "0.5.0"
 rsip-dns = "0.1.3"
 rsip = "0.2.0"
