--- a/bricc/Cargo.toml
+++ b/bricc/Cargo.toml
@@ -25,4 +25,7 @@ rsip-dns = "0.1.3"
 rsip = "0.2.0"
 smol = "1.2"
 serde = { version = "1.0", features = ["derive"] }
-toml = "0.5"
+rand = "0.8"
+stun_codec = "0.1.13"
+hex = "0.4.3"
+rustls = "0.20.2"
